--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "require-dev": {
         "phpunit/phpunit": "^8.5",
         "mockery/mockery": "^1.3",
-        "symfony/var-dumper": "^5.0"
+        "symfony/var-dumper": "^5.0",
+        "phpmetrics/phpmetrics": "^2.5",
+        "bruli/php-git-hooks": "^5.9"
     },
     "autoload": {
         "psr-4": {
@@ -31,5 +33,13 @@
         "psr-4": {
             "Kdabrow\\PhpFileModifier\\Tests\\": "tests"
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+          "PhpGitHooks\\Infrastructure\\Composer\\ConfiguratorScript::buildConfig"
+        ],
+        "post-update-cmd": [
+          "PhpGitHooks\\Infrastructure\\Composer\\ConfiguratorScript::buildConfig"
+        ]
     }
 }
