--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "mockery/mockery": "^1.3",
         "symfony/var-dumper": "^5.0",
         "phpmetrics/phpmetrics": "^2.5",
-        "bruli/php-git-hooks": "^5.9"
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
         "psr-4": {
@@ -33,13 +33,5 @@
         "psr-4": {
             "Kdabrow\\PhpFileModifier\\Tests\\": "tests"
         }
-    },
-    "scripts": {
-        "post-install-cmd": [
-          "PhpGitHooks\\Infrastructure\\Composer\\ConfiguratorScript::buildConfig"
-        ],
-        "post-update-cmd": [
-          "PhpGitHooks\\Infrastructure\\Composer\\ConfiguratorScript::buildConfig"
-        ]
     }
 }
